--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ qdrant-client>=1.9.0
 sentence-transformers>=2.6.1
 python-dotenv>=1.0.1
 requests>=2.32.3
+
+llama-index>=0.10.0
+llama-index-llms-ollama>=0.1.0
